made fixes with lists not aligning properly

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1117,7 +1117,6 @@ footer p {
 
 
 .section-content ul {
-	width: 75%;
 	list-style: disc;
 	text-align: left;
 	margin-left: 50px;
